--- a/themes/next/languages/ja.yml
+++ b/themes/next/languages/ja.yml
@@ -9,7 +9,7 @@ menu:
   archives: アーカイブ
   categories: カテゴリ
   tags: タグ
-  about: について
+  about: About
   search: 検索
   schedule: スケジュール
   sitemap: サイトマップ
@@ -19,35 +19,35 @@ sidebar:
   toc: 見出し
 post:
   posted: 投稿日
-  edited: に編集されました
+  edited: Edited on
   created: 作成された時間
   modified: Updated at
-  edit: この記事を編集する
+  edit: Edit this post
   in: In
-  more: もっと見る
+  more: more
   read_more: 続きを読む
   untitled: 無題
   sticky: 固定
   toc_empty: 見出しがありません
-  views: 閲覧数
+  views: Views
   comments_count: コメント
-  related_posts: 関連記事
-  copy_button: コピー
-  copy_success: コピーしました
-  copy_failure: コピーに失敗しました
+  related_posts: Related Posts
+  copy_button: Copy
+  copy_success: Copied
+  copy_failure: Copy failed
   copyright:
     author: 著者
-    link: 記事へのリンク
+    link: Post link
     license_title: 著作権表示
-    license_content: "このブログ内のすべての記事は、特別な記載がない限り %s の下のライセンスで保護されています。"
+    license_content: "All articles in this blog are licensed under %s unless stating additionally."
 page:
   totally: 全ページ
   tags: タグ
 footer:
   powered: "Powered by %s"
   theme: テーマ
-  total_views: 閲覧合計数
-  total_visitors: 合計閲覧者数
+  total_views: Total Views
+  total_visitors: Total Visitors
 counter:
   tag_cloud:
     zero: タグなし
@@ -81,18 +81,18 @@ symbol:
   period: "。"
   colon: "："
 reward:
-  donate: 寄付
+  donate: Donate
   wechatpay: WeChat 支払う
   alipay: Alipay
-  bitcoin: ビットコイン
+  bitcoin: Bitcoin
 gitmentbutton: Gitment からのコメントを表示
 accessibility:
-  nav_toggle: ナビゲーションバーの切り替え
-  prev_page: 前のページ
-  next_page: 次のページ
+  nav_toggle: Toggle navigation bar
+  prev_page: Previous page
+  next_page: Next page
 symbols_count_time:
   count: Symbols count in article
   count_total: Symbols count total
   time: Reading time
   time_total: Reading time total
-  time_minutes: 分
+  time_minutes: mins.
